--- a/app/src/main/res/layout/activity_numbers.xml
+++ b/app/src/main/res/layout/activity_numbers.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:id="@+id/activity_numbers"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,4 +11,4 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.android.miwok.NumbersActivity">
 
-</RelativeLayout>
+</LinearLayout>
